tests/expectations/parser/program/illegal_import_fail.out
Error [EPAR0370005]: expected 'import', 'program' -- found 'stub'
    --> test:2:1
     |
   2 | stub credits.aleo {
     | ^^^^
